2003-12-16  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-icon-view.c (play_file):
	Check for new ogg mime-type.
	Patch from Mattias Eriksson <mattias.eriksson@simovits.com>

2003-12-15  Dennis Cranston <dennis_cranston at yahoo com>

	* src/file-manager/fm-directory-view.c:  Do not add trash and
	directory uris to the recent documents list. Fixes bug #125571.
	
2003-12-13  Alex Duggan  <aldug@astrolinux.com>

	* src/nautilus-window.c (compute_default_title): 
	canonicalize URI and add titles for burn:/// and themes:/// 

2003-12-12  Vincent Untz  <vincent@vuntz.net>

	* libnautilus-private/nautilus-desktop-link-monitor.c:
	Add missing #include <gtk/gtkmessagedialog.h>

2003-12-12  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-trash-directory.c:
	Don't show the stupid looking for trash dialog.
	We shouldn't be looking for trash for long these days.
	Patch from William Lachance <wlach@nit.ca>
	
2003-12-12  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.[ch]:
	New function nautilus_file_operations_new_file.
	
	* libnautilus-private/nautilus-file-utilities.[ch]:
	New template directory functions
	
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-spatial-window-ui.xml:
	* src/nautilus-window-menus.c:
	Add Templates in location menu
	
	* src/file-manager/fm-directory-view.[ch]:
	* src/file-manager/nautilus-directory-view-ui.xml:
	Implement the templates menu.
	Fix issue that affected create new folder too,
	sometimes the file has already been added before
	we get the done callback.

2003-12-12  Christian Neumair  <chris@gnome-de.org>

	* components/Makefile.am
	* components/hardware/*:
	* configure.in:
	Removed obsolete hardware view.

2003-12-12  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	Range selection
	Clear last double click icon if you click on background
	Don't swallow alt-up
	Ignore tripple clicks